examples/gatekeeper/provider-config-ns/samples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: ProviderConfigMismatch
metadata:
  name: crossplane-provider-config-ns
spec:
  match:
    scope: "Cluster"
    kinds:
      - apiGroups: ["*"] # not possible to partial match. e.g. *.aws.crossplane.io does not work.
        kinds: ["*"]
