examples/gatekeeper/provider-config-ns/samples/namespace_mismatch_disallowed.yaml

apiVersion: s3.aws.crossplane.io/v1beta1
kind: Bucket
metadata:
  annotations:
    crossplane.io/composition-resource-name: s3-bucket
  labels:
    crossplane.io/claim-name: standard-object-storage
    crossplane.io/claim-namespace: application1
    crossplane.io/composite: standard-object-storage-zlss9
  name: standard-object-storage-zlss9-tkqgs
  ownerReferences:
    - apiVersion: awsblueprints.io/v1alpha1
      controller: true
      kind: XObjectStorage
      name: standard-object-storage-zlss9
      uid: fa2fa596-2106-4c6c-898a-8976a4686489
spec:
  deletionPolicy: Delete
  forProvider:
    acl: private
  providerConfigRef:
    name: invalid
